--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=ABAI-MatchApp
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -10,9 +10,9 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=tioszfko_matchapp
+DB_USERNAME=abai_db
+DB_PASSWORD=4@-Nx.yFU$p6
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -28,12 +28,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_USERNAME=efloristry.web@gmail.com
+MAIL_PASSWORD=Efloristry2021!
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS=efloristry.web@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
